Eventos sqlalchemy, mock_db_test e migrações com alembic. Criada tabela de usuários

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 # Created by https://www.toptal.com/developers/gitignore/api/python
 # Edit at https://www.toptal.com/developers/gitignore?templates=python
 
+# Project
+database.db
+
 ### Python ###
 # Byte-compiled / optimized / DLL files
 __pycache__/
@@ -180,3 +183,4 @@ pyrightconfig.json
 
 # Generated using ignr.py - github.com/Antrikshy/ignr.py
 
+database.db
